--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2>Welcome to MTL TLADI ACCOUNTANTS<br></h2>
-            <p> Our core service offering covers several areas of financial management, including accounting, compliance, tax advisory and payroll services. Using our deep knowledge and experience in these areas, we want to ensure that our clients receive accurate, reliable and timely financial solutions. By choosing MTL TLADI accountants, clients can trust our commitment to professionalism, integrity and client satisfaction. We strive to foster long-term partnerships with our clients, helping them achieve their financial goals and paving the way for a prosperous future.</p>
+            <p> Our core service offering covers several areas of financial management, including accounting, compliance, tax advisory and payroll services. Using our deep knowledge and experience in these areas, we want to ensure that our clients receive accurate, reliable and timely financial solutions.</p>
             
           </div>
         </div><!-- End Carousel Item -->
