--- a/contact.html
+++ b/contact.html
@@ -167,10 +167,10 @@
             <p><strong>Email:</strong> <span>mtltladi.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/TladiMtl?t=7jna7T2gTjGmGLoCvn4_kw&s=08"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/1Xi94ZdXDt/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/mtltladi?igsh=aDV5b3lvc3ZldXhk"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/mtl-tladi-accountants-96137b354?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -205,10 +205,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">MTL TLADI ACCOUNTANTS</strong></p>
       <p> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+      
         Powered by <a href="#">M&R TECH</a>
       </div>
     </div>
